--- a/src/too/sistemadeventasBundle/Resources/views/inicio.html.twig
+++ b/src/too/sistemadeventasBundle/Resources/views/inicio.html.twig
@@ -1,3 +1,7 @@
+{% if nombre %}
 <h1>Bienvenido {{ nombre }}</h1>
 <br>
 <a href="{{ path('logout') }}">Logout</a>
+{% else %}
+    <h1>Hola extraño</h1>
+{% endif %}
